--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -26,7 +26,7 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
         run: |
-          python scripts/retrain_with_feedback.py
+          python retrain_with_feedback.py
 
       - name: Commit and push new model
         run: |
