--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -1,8 +1,10 @@
 name: Retrain Model with Feedback
 
 on:
-  repository_dispatch:
-    types: [retrain_model]
+  schedule:
+    # Every night at 2 UTC
+    - cron: "0 2 * * *"
+  workflow_dispatch: # allows manual run
 
 jobs:
   retrain:
