--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -6,6 +6,9 @@ on:
     - cron: "0 2 * * *"
   workflow_dispatch: # allows manual run
 
+permissions:
+  contents: write
+  
 jobs:
   retrain:
     runs-on: ubuntu-latest
